feat(studio): remove prompt playground
